Fix export JSON project view margin clipping

--- a/front-end/src/styles/app.scss
+++ b/front-end/src/styles/app.scss
@@ -346,7 +346,7 @@ $content-sidebar-width: 92px;
   }
 
   &__bottom-buttons {
-    margin: -10px 0 0 0;
+    margin: 1em 0 0 0;
   }
 }
 
